--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -6,7 +6,8 @@ $purple = #6D36A0
 
 // Fonts
 $text-size = 1.4rem
-$text = $text-size 'Montserrat', sans-serif
+$font-family = 'Montserrat', sans-serif
+$text = $text-size $font-family
 
 *
     margin 0
@@ -19,6 +20,10 @@ $text = $text-size 'Montserrat', sans-serif
     display flex
     flex-direction column
     justify-content center
+    img
+        width 8vw
+        position fixed
+        top 5vh
     nav
         height 20%
         position relative
@@ -59,4 +64,25 @@ $text = $text-size 'Montserrat', sans-serif
                         &::after
                             transform translateX(0)
                             opacity 1
+
+header
+    height 100vh
+    width 100vw
+    display flex
+    justify-content center
+    align-items center
+    text-align center
+    .content
+        h2
+            color $purple
+            font-family $font-family
+            font-weight bold
+            font-size 50px
+            margin-bottom 10vh
+        p
+            color $grey
+            font $text
+    canvas
+        position absolute
+        z-index -1
                     
