--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -6,8 +6,10 @@ $purple = #6D36A0
 
 // Fonts
 $text-size = 1.4rem
+$title-size = 4rem
 $font-family = 'Montserrat', sans-serif
 $text = $text-size $font-family
+$title = $title-size $font-family
 
 *
     margin 0
@@ -59,7 +61,7 @@ $text = $text-size $font-family
                         background $purple
                         opacity 0
                         transition all 0.3s
-                    &:hover
+                    &:hover, &.active
                         color $purple
                         &::after
                             transform translateX(0)
@@ -85,4 +87,39 @@ header
     canvas
         position absolute
         z-index -1
-                    
+main
+    .project
+        display flex
+        flex-direction row
+        justify-content space-between
+        margin 10vw
+        .img
+            width 50%
+            img
+                width 100%
+        .content
+            display flex
+            flex-direction: column
+            h3
+                font-size 8rem
+                font-family $font-family
+                position relative
+                width fit-content
+                &::after
+                    content ""
+                    position absolute
+                    width 100%
+                    height 10%
+                    background-color $purple
+                    bottom 15%
+                    left 0
+                    opacity 0.5
+            .text
+                width 86%
+                padding-left 5vw
+                h2
+                    font $title
+                    font-weight 600
+                p
+                    font $text
+                    padding-top 2vh
