--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -5,8 +5,8 @@ $grey = #68626E
 $purple = #6D36A0
 
 // Fonts
-$text-size = 1.4rem
-$title-size = 4rem
+$text-size = 1.4em
+$title-size = 4em
 $font-family = 'Montserrat', sans-serif
 $text = $text-size $font-family
 $title = $title-size $font-family
@@ -92,7 +92,7 @@ main
         display flex
         flex-direction row
         justify-content space-between
-        margin 10vw
+        margin 12vw
         .img
             width 50%
             img
@@ -100,6 +100,7 @@ main
         .content
             display flex
             flex-direction: column
+            width 40%
             h3
                 font-size 8rem
                 font-family $font-family
