:bug: Fixed project position for little pc

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -6,7 +6,7 @@ $purple = #6D36A0
 
 // Fonts
 $text-size = 1.4em
-$title-size = 4em
+$title-size = 3em
 $font-family = 'Montserrat', sans-serif
 $text = $text-size $font-family
 $title = $title-size $font-family
@@ -102,7 +102,7 @@ main
             flex-direction: column
             width 40%
             h3
-                font-size 8rem
+                font-size 6em
                 font-family $font-family
                 position relative
                 width fit-content
@@ -118,6 +118,7 @@ main
             .text
                 width 86%
                 padding-left 5vw
+                margin-top 5vh
                 h2
                     font $title
                     font-weight 600
