:bug: Fixed project margin

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -92,7 +92,7 @@ main
         display flex
         flex-direction row
         justify-content space-between
-        margin 12vw
+        margin 10vw 5vw 10vw 12vw
         .img
             width 50%
             img
