--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -14,6 +14,7 @@ $title = $title-size $font-family
 *
     margin 0
     padding 0
+    cursor none
 
 .aside
     position fixed
@@ -44,6 +45,7 @@ $title = $title-size $font-family
             list-style none
             justify-content space-between
             li
+                padding-bottom 20px
                 a
                     color $grey
                     text-decoration none
@@ -66,6 +68,18 @@ $title = $title-size $font-family
                         &::after
                             transform translateX(0)
                             opacity 1
+.mouse
+    position fixed
+    width 50px
+    height 50px
+    border solid 0.5px black
+    border-radius 100%
+    z-index -1
+    transition transform 0.1s
+    &.hover
+        transform scale(1.5)
+        
+
 
 header
     height 100vh
@@ -95,6 +109,7 @@ main
         margin 10vw 5vw 10vw 12vw
         .img
             width 50%
+            z-index -2
             img
                 width 100%
         .content
