--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -14,7 +14,7 @@ $title = $title-size $font-family
 *
     margin 0
     padding 0
-    cursor none
+    // cursor none
 
 .aside
     position fixed
@@ -109,7 +109,6 @@ main
         margin 10vw 5vw 10vw 12vw
         .img
             width 50%
-            z-index -2
             img
                 width 100%
         .content
