--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -15,6 +15,7 @@ $title = $title-size $font-family
     margin 0
     padding 0
     // cursor none
+    scroll-behavior smooth
 
 .aside
     position fixed
@@ -94,7 +95,7 @@ header
             font-family $font-family
             font-weight bold
             font-size 50px
-            margin-bottom 10vh
+            text-align left
         p
             color $grey
             font $text
@@ -109,8 +110,42 @@ main
         margin 10vw 5vw 10vw 12vw
         .img
             width 50%
+            position relative
+            text-align center
+            text-decoration none
             img
                 width 100%
+            &::after
+                content ""
+                position absolute
+                left 0
+                width 100%
+                height 100%
+                background-color black
+                opacity 0.8
+                transform scaleY(0)
+                transform-origin bottom
+                transition 0.3s
+                will-change transform
+            &:hover::after
+                transform scaleY(1)
+            .imgText
+                position absolute
+                text-transform uppercase
+                color $purple
+                font-size 2rem
+                font-family $font-family
+                transform translateY(0)
+                opacity 0
+                transition 0.3s
+                z-index -10
+                width 100%
+                height 100%
+                vertical-align middle
+            &:hover .imgText
+                transform translateY(-50%)
+                opacity 0.8
+                z-index 10
         .content
             display flex
             flex-direction: column
@@ -133,9 +168,31 @@ main
                 width 86%
                 padding-left 5vw
                 margin-top 5vh
+                position relative
                 h2
                     font $title
                     font-weight 600
                 p
                     font $text
                     padding-top 2vh
+                a
+                    color black
+                    text-decoration none
+                    font $text
+                    text-transform uppercase
+                    margin-top 10%
+                    position absolute
+                    &::after
+                        content ""
+                        width 30%
+                        height 2px
+                        position absolute
+                        bottom 0
+                        left 0
+                        background-color $purple
+                        transform scaleX(0)
+                        transform-origin left
+                        transition transform 0.3s
+                        will-change transform
+                    &:hover::after
+                        transform scaleX(1)
