:lipstick: Change hover color

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -121,7 +121,7 @@ main
                 left 0
                 width 100%
                 height 100%
-                background-color black
+                background-color #fff
                 opacity 0.8
                 transform scaleY(0)
                 transform-origin bottom
@@ -132,7 +132,7 @@ main
             .imgText
                 position absolute
                 text-transform uppercase
-                color $grey
+                color $purple
                 font-size 2rem
                 font-family $font-family
                 transform translateY(-50%)
@@ -182,14 +182,15 @@ main
                     margin-top 10%
                     position absolute
 footer 
-    margin-left 15vw
+    margin 0 auto
+    width 60vw
     ul
         font $text
         display flex
         flex-direction row
         justify-content space-between
         list-style none
-        width 60%
+        width 100%
         li
             a
                 text-decoration none
