--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -193,9 +193,11 @@ main
         height 100vh
         top 0
         left 0
+        right 0
+        bottom 0
         background-color white
         transform translateX(100%)
-        transition transform 0.3s
+        transition transform 0.3s ease-out
         will-change transform
         display flex
         flex-direction column
