:lipstick: Changing global font and margin

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -5,8 +5,8 @@ $grey = #68626E
 $purple = #6D36A0
 
 // Fonts
-$text-size = 1.4em
-$title-size = 3em
+$text-size = 1.2em
+$title-size = 2.5em
 $font-family = 'Montserrat', sans-serif
 $text = $text-size $font-family
 $title = $title-size $font-family
@@ -38,7 +38,7 @@ body
         transform translateX(0)
         opacity 1
     img
-        width 8vw
+        width 6vw
         position fixed
         top 5vh
     nav
@@ -134,6 +134,7 @@ main
             text-align center
             text-decoration none
             overflow hidden
+            align-self center
             img
                 width 100%
             &::after
@@ -200,7 +201,7 @@ main
                     text-decoration none
                     font $text
                     text-transform uppercase
-                    margin-top 10%
+                    margin-top 5%
                     position absolute
     .casestudy
         position fixed
