--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -166,9 +166,10 @@ main
                 content ""
                 position absolute
                 left 0
+                bottom 0
                 width 100%
-                height 100%
-                background-color #fff
+                height 20%
+                background-color white
                 opacity 0.8
                 transform scaleY(0)
                 transform-origin bottom
@@ -178,19 +179,21 @@ main
                 transform scaleY(1)
             .imgText
                 position absolute
+                bottom 0
                 text-transform uppercase
                 color $purple
-                font-size 2rem
+                font-size 1.5rem
                 font-family $font-family
-                transform translateY(-50%)
+                transform translateY(200%)
                 opacity 0
                 transition 0.3s
                 z-index -10
                 width 100%
-                height 100%
+                height 10%
                 vertical-align middle
             &:hover .imgText
                 opacity 1
+                transform translateY(-50%)
                 z-index 10
         .content
             display flex
