--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -14,6 +14,10 @@ $littleScreen = 480px
 $mediumScreen = 768px
 $bigScreen = 1024px
 
+::selection
+    background-color rgba(109, 54, 160,0.5)
+
+
 *
     margin 0
     padding 0
@@ -126,7 +130,6 @@ header
     display flex
     justify-content center
     align-items center
-    text-align center
     .content
         transform translateY(150%)
         opacity 0
@@ -140,6 +143,23 @@ header
         p
             color $grey
             font $text
+            a
+                position relative
+                text-decoration none
+                &::after
+                    content ""
+                    position absolute
+                    right 0
+                    bottom 0
+                    width 20%
+                    height 1px
+                    transform scaleX(1)
+                    transform-origin left
+                    transition 0.3s transform
+                    background $purple
+                &:hover::after                  
+                    transform scaleX(0)
+                    transform-origin right
         &.appear
             transform translateX(0)
             opacity 1
@@ -213,6 +233,7 @@ main
                     bottom 15%
                     left 0
                     opacity 0.5
+                    z-index -1
             .text
                 width 86%
                 padding-left 5vw
@@ -238,7 +259,7 @@ main
         top 0
         right 0
         bottom 0
-        background-color white
+        background-color $purple
         transform translateX(100%)
         transition transform 0.3s ease-out
         will-change transform
@@ -246,7 +267,6 @@ main
         flex-direction column
         justify-content center
         z-index 40
-        box-shadow 0px 0px 8px 0px rgba(0,0,0,0.80)
         &.open
             transform translateX(0)
         .info
@@ -254,14 +274,36 @@ main
             margin 2% auto
             h3
                 font-family $font-family
-                font-weight normal
                 font-size 1.5rem
                 color $purple
                 margin-bottom 2%
+                color white
             p
                 font $text
-                color $grey
-                margin-left 5%
+                color white
+                font-size 1rem
+                color white
+            a.project_link
+                position relative
+                font-weight bold
+                font-size 1.5rem
+                color white
+                text-decoration none
+                font-family $font-family
+                &::after
+                    content ""
+                    position absolute
+                    right 0
+                    bottom 0
+                    width 20%
+                    height 1px
+                    transform scaleX(1)
+                    transform-origin left
+                    transition 0.3s transform
+                    background white
+                &:hover::after                  
+                    transform scaleX(0)
+                    transform-origin right
         .close
             position absolute
             top 20px
@@ -275,7 +317,7 @@ main
                 right 15px
                 width 1px
                 height 30px
-                background-color #000
+                background-color #fff
                 transform rotate(45deg)
                 transition transform 0.3s ease 
                 will-change transform
@@ -285,7 +327,7 @@ main
                 right 15px
                 width 1px
                 height 30px
-                background-color #000
+                background-color #fff
                 transform rotate(-45deg)
                 transition transform 0.3s ease 
                 will-change transform
