--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -195,6 +195,9 @@ main
             text-decoration none
             overflow hidden
             align-self center
+            display flex
+            justify-content center
+            align-items center
             img
                 width 100%
             &::after
@@ -203,33 +206,28 @@ main
                 left 0
                 bottom 0
                 width 100%
-                height 20%
+                height 100%
                 background-color white
-                opacity 0.8
-                transform scaleY(0)
-                transform-origin bottom
-                transition 0.3s
-                will-change transform
-            &:hover::after
-                transform scaleY(1)
-            .imgText
-                position absolute
-                bottom 0
-                text-transform uppercase
-                color $purple
-                font-size 1.5rem
-                font-family $font-family
-                transform translateY(200%)
                 opacity 0
                 transition 0.3s
-                z-index -10
-                width 100%
-                height 10%
-                vertical-align middle
-            &:hover .imgText
-                opacity 1
-                transform translateY(-50%)
+                will-change opacity
+            &:hover::after
+                opacity 0.8
+            .imgTextDiv
+                position absolute
                 z-index 10
+                width 100%
+                overflow hidden
+                .imgText
+                    text-transform uppercase
+                    color $purple
+                    font-size 1.5rem
+                    font-family $font-family
+                    z-index 10
+                    transform translateY(100%) skewY(3deg)
+                    transition 0.3s
+            &:hover .imgTextDiv .imgText
+                transform translateY(0) skewY(0)
         .content
             display flex
             flex-direction: column
