--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -208,34 +208,34 @@ main
             img
                 width 100%
                 opacity 0
-            &::after
-                content ""
-                position absolute
-                left 0
-                bottom 0
-                width 100%
-                height 100%
-                background-color white
-                opacity 0
-                transition 0.3s
-                will-change opacity
-            &:hover::after
-                opacity 0.8
-            .imgTextDiv
-                position absolute
-                z-index 10
-                width 100%
-                overflow hidden
-                .imgText
-                    text-transform uppercase
-                    color $purple
-                    font-size 1.5rem
-                    font-family $font-family
-                    z-index 10
-                    transform translateY(100%) skewY(3deg)
-                    transition 0.3s
-            &:hover .imgTextDiv .imgText
-                transform translateY(0) skewY(0)
+            // &::after
+            //     content ""
+            //     position absolute
+            //     left 0
+            //     bottom 0
+            //     width 100%
+            //     height 100%
+            //     background-color white
+            //     opacity 0
+            //     transition 0.3s
+            //     will-change opacity
+            // &:hover::after
+            //     opacity 0.8
+            // .imgTextDiv
+            //     position absolute
+            //     z-index 10
+            //     width 100%
+            //     overflow hidden
+            //     .imgText
+            //         text-transform uppercase
+            //         color $purple
+            //         font-size 1.5rem
+            //         font-family $font-family
+            //         z-index 10
+            //         transform translateY(100%) skewY(3deg)
+            //         transition 0.3s
+            // &:hover .imgTextDiv .imgText
+            //     transform translateY(0) skewY(0)
         .content
             display flex
             flex-direction: column
