:sparkles: Add shader on main canvas

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -149,6 +149,14 @@ header
     display flex
     justify-content center
     align-items center
+    .curtain
+        position absolute
+        top 0
+        left 0
+        right 0
+        bottom 0
+        canvas
+            display none
     .content
         transform translateY(150%)
         opacity 0
