--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -82,6 +82,7 @@ body
     transform translateX(-100%)
     opacity 0
     transition all 0.7s
+    z-index 10
     &.appear
         transform translateX(0)
         opacity 1
@@ -161,6 +162,7 @@ header
         transform translateY(150%)
         opacity 0
         transition all 0.7s ease
+        z-index 10
         h2
             color $purple
             font-family $font-family
