:fire: Cleaning code

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -158,6 +158,8 @@ header
         bottom 0
         canvas
             display none
+        &.no-curtain
+            display block
     .content
         transform translateY(150%)
         opacity 0
@@ -218,6 +220,8 @@ main
             img
                 width 100%
                 opacity 0
+                &.no-curtain
+                    opacity 1
             // &::after
             //     content ""
             //     position absolute
