--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -287,89 +287,89 @@ main
                     text-transform uppercase
                     margin-top 5%
                     position absolute
-    .casestudy
-        position fixed
-        width 40vw
-        height 100vh
-        top 0
-        right 0
-        bottom 0
-        background-color $purple
-        transform translateX(100%)
-        transition transform 0.3s ease-out
-        will-change transform
-        display flex
-        flex-direction column
-        justify-content center
-        z-index 40
-        &.open
-            transform translateX(0)
-        .info
-            width 80%
-            margin 2% auto
-            h3
-                font-family $font-family
-                font-size 1.5rem
-                color $purple
-                margin-bottom 2%
-                color white
-            p
-                font $text
-                color white
-                font-size 1rem
-                color white
-            a.project_link
-                position relative
-                font-weight bold
-                font-size 1.5rem
-                color white
-                text-decoration none
-                font-family $font-family
-                &::after
-                    content ""
-                    position absolute
-                    right 0
-                    bottom 0
-                    width 20%
-                    height 1px
-                    transform scaleX(1)
-                    transform-origin left
-                    transition 0.3s transform
-                    background white
-                &:hover::after                  
-                    transform scaleX(0)
-                    transform-origin right
-        .close
-            position absolute
-            top 20px
-            right 20px
-            cursor pointer
-            width 30px
-            height 30px
-            &::after
-                content ""
-                position absolute
-                right 15px
-                width 1px
-                height 30px
-                background-color #fff
-                transform rotate(45deg)
-                transition transform 0.3s ease 
-                will-change transform
-            &::before
-                content ""
-                position absolute
-                right 15px
-                width 1px
-                height 30px
-                background-color #fff
-                transform rotate(-45deg)
-                transition transform 0.3s ease 
-                will-change transform
-            &:hover::after
-                transform rotate(-45deg)
-            &:hover::before
-                transform rotate(45deg)
+    // .casestudy
+    //     position fixed
+    //     width 40vw
+    //     height 100vh
+    //     top 0
+    //     right 0
+    //     bottom 0
+    //     background-color $purple
+    //     transform translateX(100%)
+    //     transition transform 0.3s ease-out
+    //     will-change transform
+    //     display flex
+    //     flex-direction column
+    //     justify-content center
+    //     z-index 40
+    //     &.open
+    //         transform translateX(0)
+    //     .info
+    //         width 80%
+    //         margin 2% auto
+    //         h3
+    //             font-family $font-family
+    //             font-size 1.5rem
+    //             color $purple
+    //             margin-bottom 2%
+    //             color white
+    //         p
+    //             font $text
+    //             color white
+    //             font-size 1rem
+    //             color white
+    //         a.project_link
+    //             position relative
+    //             font-weight bold
+    //             font-size 1.5rem
+    //             color white
+    //             text-decoration none
+    //             font-family $font-family
+    //             &::after
+    //                 content ""
+    //                 position absolute
+    //                 right 0
+    //                 bottom 0
+    //                 width 20%
+    //                 height 1px
+    //                 transform scaleX(1)
+    //                 transform-origin left
+    //                 transition 0.3s transform
+    //                 background white
+    //             &:hover::after                  
+    //                 transform scaleX(0)
+    //                 transform-origin right
+        // .close
+        //     position absolute
+        //     top 20px
+        //     right 20px
+        //     cursor pointer
+        //     width 30px
+        //     height 30px
+        //     &::after
+        //         content ""
+        //         position absolute
+        //         right 15px
+        //         width 1px
+        //         height 30px
+        //         background-color #fff
+        //         transform rotate(45deg)
+        //         transition transform 0.3s ease 
+        //         will-change transform
+        //     &::before
+        //         content ""
+        //         position absolute
+        //         right 15px
+        //         width 1px
+        //         height 30px
+        //         background-color #fff
+        //         transform rotate(-45deg)
+        //         transition transform 0.3s ease 
+        //         will-change transform
+        //     &:hover::after
+        //         transform rotate(-45deg)
+        //     &:hover::before
+        //         transform rotate(45deg)
 footer 
     margin 0 auto
     width 60vw
