--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -158,6 +158,8 @@ header
         bottom 0
         canvas
             display none
+        &.visible
+            display block
         &.no-curtain
             display block
     .content
