--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -35,35 +35,46 @@ html
 body
     overflow-x hidden
     overflow-y hidden
-    .test
+    .loading-container
         position absolute
         top 0
         bottom 0
         left 0
         right 0
-        background $purple
         z-index 20
-        transition transform 3s
-        transition-delay 1s
+        transition transform 1s ease-in
+        transition-delay 3s
         transform translateY(-100%)
         display flex
         justify-content center
         align-items center
-        &.visible
+        &.visible::before
             transform translateY(0)
+        &::before
+            content ""
+            position absolute
+            width 100%
+            height 100%
+            background $purple
+            transform translateY(-100%)
+            transition transform 1s ease-in
+            transition-delay 1s
         .loading
             position relative
+            overflow-y hidden
+            &.leave .text
+                transform translateY(-100%)
+                transition transform 1s ease-in
             .text
                 font-size 5rem
                 color white
                 font-family $font-family
             .loader
-                position absolute
                 background-color #FFFFFF
                 top 110%
                 left 0
+                right 0
                 height 2px
-                width 100%
                 transform scaleX(0)
                 transform-origin left
     #canvas
@@ -187,6 +198,7 @@ header
         left 0
         right 0
         bottom 0
+        transform translate(-10%, -10%)
         canvas
             display none
         &.visible
