:sparkles: Add real h1 and h2

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -210,15 +210,19 @@ header
         opacity 0
         transition all 0.7s ease
         z-index 10
-        h2
+        h3
             color $purple
             font-family $font-family
             font-weight bold
             font-size 3.5rem
             text-align left
-        p
+        .text
             color $grey
             font $text
+            display flex
+            flex-direction row
+            h1, h2
+                font $text
             a
                 position relative
                 text-decoration none
