:lipstick: Fix responsive

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -221,6 +221,8 @@ header
             font $text
             display flex
             flex-direction row
+            justify-content flex-start
+            flex-wrap wrap
             h1, h2
                 font $text
             a
