--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -44,19 +44,17 @@ body
         z-index 20
         transition transform 1s ease-in
         transition-delay 3s
-        transform translateY(-100%)
         display flex
         justify-content center
         align-items center
-        &.visible::before
-            transform translateY(0)
+        &.disapear::before
+            transform translateY(-100%)
         &::before
             content ""
             position absolute
             width 100%
             height 100%
             background $purple
-            transform translateY(-100%)
             transition transform 1s ease-in
             transition-delay 1s
         .loading
