:bug: Try to fix loading

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -80,6 +80,7 @@ body
                 transition transform 0.3s ease-in-out
                 &.disapear
                     transition transform 1.5s ease-in-out
+                    transform scaleX(0)
     #canvas
         position fixed
         top 0
