:bug: Fix responsive bugs

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -31,6 +31,7 @@ html
         font-size 11px
     @media all and (max-width: $littleScreen)
         font-size 8px
+        overflow-x hidden
 
 body
     overflow-x hidden
@@ -271,7 +272,7 @@ main
         &.left
             transform translateX(-50%)
             @media all and (max-width: $littleScreen)
-                transform translateX(-100%)
+                transform translateX(-150%)
         &.appear
             transform translateX(0)
             .content
