:sparkles: Change text on internship and CV

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -229,7 +229,7 @@ header
             flex-direction row
             justify-content flex-start
             flex-wrap wrap
-            width 80%
+            // width 80%
             h1, h2
                 font $text
             a
