--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -37,7 +37,7 @@ body
     overflow-x hidden
     overflow-y hidden
     .loading-container
-        position absolute
+        position fixed
         top 0
         bottom 0
         left 0
@@ -62,7 +62,7 @@ body
             transition-delay 1s
         .loading
             position relative
-            overflow-y hidden
+            overflow hidden
             &.leave .text
                 transform translateY(-100%)
                 transition transform 1s ease-in
