--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -330,21 +330,37 @@ main
             transition all 0.5s ease-in-out
             transition-delay 0.5s
             opacity 0
-            h3
-                font-size 6rem
-                font-family $font-family
-                position relative
-                width fit-content
-                &::after
-                    content ""
-                    position absolute
-                    width 100%
-                    height 10%
-                    background-color $purple
-                    bottom 15%
-                    left 0
-                    opacity 0.5
-                    z-index -1
+            @media all and (max-width: $mediumScreen)
+                margin-top 10px
+            .top-container
+                display flex
+                flex-direction row
+                justify-content space-between
+                h3
+                    font-size 6rem
+                    font-family $font-family
+                    position relative
+                    width fit-content
+                    &::after
+                        content ""
+                        position absolute
+                        width 100%
+                        height 10%
+                        background-color $purple
+                        bottom 15%
+                        left 0
+                        opacity 0.5
+                        z-index -1
+                .tech
+                    display flex
+                    flex-direction row
+                    align-items center
+                    justify-content space-between
+                    .tech-logo
+                        width auto
+                        height 50px
+                        @media all and (max-width: $mediumScreen)
+                            height 30px
             .text
                 width 95%
                 margin-top 5vh
