--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -21,7 +21,7 @@ $bigScreen = 1024px
 *
     margin 0
     padding 0
-    // cursor none
+    cursor none
     scroll-behavior smooth
     // user-select none
 
@@ -180,10 +180,6 @@ body
                             opacity 1
 .mouse
     position fixed
-    width 50px
-    height 50px
-    border solid 0.5px black
-    border-radius 100%
     z-index 10
     transition transform 0.1s
     pointer-events none
@@ -192,8 +188,21 @@ body
         display none
     &.appear
         opacity 1
-    // &.hover
-    //     transform scale(1.5)
+    &.hover
+        &:after
+            transform scale(1.2)
+    &::after
+        content ""
+        position absolute
+        top 0
+        left 0
+        width 40px
+        height 40px
+        border solid 0.5px black
+        border-radius 100%
+        transition transform 0.3s
+
+
         
 
 
@@ -512,4 +521,4 @@ footer
         transform scaleX(1)
 
 .caselink
-    cursor pointer
+    // cursor pointer
